[metadata]
name = pystratis
version = attr: pystratis.__version__
author = Tjaden Froyda, Stratis Platform
author_email = support@stratisplatform.com
url = https://github.com/stratisproject/pystratis
description = Official python package for interacting with Stratis (STRAX) full node and Cirrus/Interflux sidechain.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stratis, cirrus, pystratis, smartcontracts, blockchain
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = True
python_requires = >=3.7, <4
install_requires =
    requests
    pydantic>=1.8.2
    base58
    base58check
    bech32

[options.extras_require]
test =
    pytest
    pytest_mock
    pytest_order
    pytest-timetout
    coverage
    ecdsa
    mnemonic

[options.packages.find]
exclude =
    *tests*